--- a/gradle.properties
+++ b/gradle.properties
@@ -6,15 +6,15 @@ org.gradle.warning.mode = all
 
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version = 1.17.1
-yarn_mappings = 1.17.1+build.61:v2
-loader_version = 0.12.1
+minecraft_version = 1.18-pre1
+yarn_mappings = 1.18-pre1+build.8:v2
+loader_version = 0.12.5
 
 # Mod Properties
-mod_version = 2.1.1
+mod_version = 2.2.0
 maven_group = com.jamieswhiteshirt
 archives_base_name = reach-entity-attributes
 
 # Dependencies
-fabric_version = 0.40.6+1.17
+fabric_version = 0.42.2+1.18
 jsr305_version = 3.0.2
